crates/test-files/fixtures/compile_errors/undefined_type_param.fe
# https://github.com/ethereum/fe/issues/530

struct BadField {
    pub x: MysteryType
}

contract Foo {
    pub fn a(_ val: DoesntExist) {
        val + 10
    }

    pub fn b() {
        a(10)
    }

    pub fn c() {
        let x: BadField
        x.x = 10
    }
}
